--- a/get_source/templates/get_source/index.html
+++ b/get_source/templates/get_source/index.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>HELLO! WORLD!</title>
+    <title>Start Page</title>
 </head>
 <body>
-    <h1>get_source/start_app</h1>
+    <h1>SAMPLE</h1>
     <p>sample page</p>
 </body>
 </html>
